# CenterlineExtraction

./: .gitignore  CMakeLists.txt  CenterlineExtraction.cpp  CenterlineExtraction.h  ExtractSegments.cpp  ExtractSegments.h  LibThinning2D.cu  Makefile  README.md
example/python/: all.py  concat.ipynb  main.py  utils.py
